--- a/view/stock_kardex_view.xml
+++ b/view/stock_kardex_view.xml
@@ -43,7 +43,7 @@
         <field name="target">new</field>
     </record>
 
-    <menuitem id="menu_stock_kardex" name="Kardex" parent="mrp_workorder.mrp_production_menu_planning" action="action_stock_kardex"/>
+    <menuitem id="menu_stock_kardex" name="Kardex" parent="stock.menu_stock_inventory_control" action="action_stock_kardex"/>
 
     <record id="stock_kardex_detail_view" model="ir.ui.view">
         <field name="name">stock.kardex.detail.view</field>
