--- a/view/stock_kardex_view.xml
+++ b/view/stock_kardex_view.xml
@@ -19,6 +19,7 @@
                             <field name="location_id" />
                             <field name="stock_start" />
                             <field name="stock_end" />
+                            <field name="qty_reserve" />
                         </group>
                         <group>
                             <field name="date_start" />
@@ -27,10 +28,12 @@
                     </group>
                     <field name="stock_kardex_detail_ids" mode="tree">
                         <tree string="Detail" >
-                            <field name="stock_move_id" />
+                            <!--<field name="stock_move_id" />-->
                             <field name="location_id" />
                             <field name="location_dest_id" />
-                            <field name="move_qty_product" />
+                            <!--<field name="move_qty_product" />-->
+                            <field name="product_incomming" />
+                            <field name="product_outgoing" />
                             <field name="qty_product" />
                             <field name="move_date" />
                         </tree>
@@ -59,7 +62,9 @@
                         <group>
                             <field name="stock_move_id" readonly="1"/>
                             <field name="move_qty_product" readonly="1"/>
-                            <field name="qty_product" readonly="1"/>
+                            <!--<field name="qty_product" readonly="1"/>-->
+                            <field name="product_incomming" />
+                            <field name="product_outgoing" />
                             <field name="move_date" readonly="1"/>
                         </group>
                     </group>
